Java 21 modernization (src/main, Tier 1): sealed types, switch expressions, pattern matching
No behavior change; readability/safety only.
- Sealed hierarchies: MetricTarget permits CloudWatch/CloudWatchComponent/Messaging/Log;
  ConfigProvider permits the 5 providers. All impls marked final. (MessagingProvider
  left non-sealed: its impls are in sub-packages and cross-package sealed permits needs
  a named module; the two impls are still marked final.)
- Switch expressions: MetricEmitter metric-target dispatch and ConfigProviderBuilder
  config-source dispatch (drop null accumulators; single definite assignment); GGCommons
  mode parsing -> arrow switch.
- Pattern matching for instanceof: Message (x2) and MessageBuilder (x2).
- Correctness/clarity: Heartbeat timer task now guarded by try/catch (an uncaught
  exception no longer kills the Timer thread); CloudWatch timestamp = Instant.now()
  (was a parse(format(now())) round-trip; removed 3 now-unused imports);
  MetricBuilder trim().isEmpty() -> isBlank(); var for collection locals.

mvn clean verify on Temurin 25 (release 21): 293 tests pass, 90% coverage gate met.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>